Fixed size of profile pictures gallery on mobile.

--- a/frontend/portfolio/portfolio_interface.css
+++ b/frontend/portfolio/portfolio_interface.css
@@ -18,11 +18,11 @@
 }
 
 .pictures_container {
-	width: 60%;
+	max-width: 100%;
 	padding: 10px;
 	display: grid;
 	grid-template-columns: 4rem auto 4rem;
-	grid-template-row: auto 4rem auto;
+	grid-template-rows: auto 4rem auto;
 	align-items: center;
 }
 
